--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 <div id="welcomeScreen">
     <img src="logo.png" alt="LOGO MAWAR 3" class="logo-welcome">
     <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
-    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.6.1</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
+    <p>Built and developed by Fajar Ilmanosa Viar . <b>V10.5.6</b> . Copyright © 2026 Gang Mawar 3 . All Rights Reserved.</p>
     <button id="enterBtn" onclick="masukWeb()">MASUK</button>
 </div>
 
@@ -281,7 +281,7 @@ Copyright © 2026 Administrasi Kas Gang Mawar 3. Seluruh Hak Cipta Dilindungi Un
 </div>
 
 <div style="text-align:center; margin-top:30px; margin-bottom:50px; padding:20px; border-top:1px solid var(--border); font-size:0.8rem; color:#888; text-transform:none;">
-    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.6.1 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
+    Built and developed by <b style="color:var(--accent);">Fajar Ilmanosa Viar</b> | V10.5.6 Supreme Security and Terms | Copyright &copy; 2026 Gang Mawar 3 . All Rights Reserved.
 </div>
 
 <div id="checklistModal">
@@ -976,63 +976,26 @@ function uploadBackup(event) {
 }
 
 document.getElementById('adminBtn').onclick = async function() {
-    if(!isAdmin){
-        let u = prompt('USER ADMIN:'), p = prompt('PASSWORD ADMIN:');
-        
-        if(u && p){
-            // Fungsi Enkripsi Internal Mandiri
-            const getHash = async (teks) => {
-                const msgBuffer = new TextEncoder().encode(teks.trim().toUpperCase());
-                const hashBuffer = await crypto.subtle.digest('SHA-256', msgBuffer);
-                return Array.from(new Uint8Array(hashBuffer)).map(b => b.toString(16).padStart(2, '0')).join('');
-            };
-
-            try {
-                const userHash = await getHash(u);
-                const passHash = await getHash(p);
-
-                // Hash "ADMIN" dan "SANUMION"
-                const uT = "c1c224b03d40ffa419b48f95f488e07b46ca79d63f0d4b9987f17b9b0068a05c";
-                const pT = "f7e034731a547514309c09539352613010ea38781a7a00d3d3a01666870a4698";
-
-                if(userHash === uT && passHash === pT){
-                    isAdmin = true; 
-                    this.textContent = '✅ ADMIN ON 🔓'; 
-                    this.className = 'primary';
-                    document.getElementById('adminTools').style.display = 'flex';
-                    if(typeof applyAdminLock === 'function') applyAdminLock(); 
-                    if(typeof recalc === 'function') recalc(); 
-                    alert('ADMIN ON - Hormat saya, Tuan.');
-                } else { 
-                    alert('AKSES DITOLAK!');
-                    // Protokol Intelijen Keamanan
-                    db.ref('log_pelanggaran_hardware').push({ 
-                        penyamar: currentUserName || 'Unknown', 
-                        pemilik_asli: "PERCOBAAN_ADMIN_ILEGAL", 
-                        waktu: new Date().toLocaleString() 
-                    });
-                }
-            } catch(e) {
-                // Jalur Darurat jika enkripsi browser bermasalah
-                if(u.toUpperCase()==='ADMIN' && p.toUpperCase()==='SANUMION'){
-                    isAdmin=true; this.textContent='✅ ADMIN ON 🔓'; this.className='primary';
-                    document.getElementById('adminTools').style.display='flex';
-                    alert('ADMIN ON (Safe Mode) - Hormat saya, Tuan.');
-                } else {
-                    alert('AKSES DITOLAK!');
-                }
-            }
-        }
-    } else {
-        isAdmin = false; 
-        this.textContent = '⛔ ADMIN OFF 🔒'; 
-        this.className = 'off';
-        document.getElementById('adminTools').style.display = 'none';
-        if(typeof applyAdminLock === 'function') applyAdminLock();
-    }
-    toggleMenu();
+ if(!isAdmin){
+  let u=prompt('USER'), p=prompt('PASS');
+  if(u && u.toUpperCase()==='\x41\x44\x4D\x49\x4E' && p && p.toUpperCase()==='\x53\x41\x4E\x55\x4D\x49\x4F\x4E'){
+   isAdmin=true; this.textContent='✅ ADMIN ON 🔓'; this.className='primary';
+   document.getElementById('adminTools').style.display='flex';
+   applyAdminLock(); recalc(); alert('BERHASIL!');
+  } else { 
+   const net = await getNetworkIntel();
+   const sys = getSystemIntel();
+   db.ref('log_pelanggaran_hardware').push({ penyamar: currentUserName, pemilik_asli: "PERCOBAAN_ADMIN_ILEGAL", hw: "ADMIN_SEC", ip: net.ip, isp: net.isp, os: sys.os, br: sys.br, waktu: new Date().toLocaleString() });
+   alert('SALAH!'); 
+  }
+ } else {
+  isAdmin=false; this.textContent='⛔ ADMIN OFF 🔒'; this.className='off';
+  document.getElementById('adminTools').style.display='none';
+  applyAdminLock();
+ }
+ toggleMenu();
 };
- 
+
 function prevMonth(){ bulan--; if(bulan<0){bulan=11; tahun--;} updateUI(); }
 function nextMonth(){ bulan++; if(bulan>11){bulan=0; tahun++;} updateUI(); }
 function updateUI(){ document.getElementById('periode').textContent=namaBulan[bulan]+' '+tahun; loadData(); }
@@ -1094,13 +1057,4 @@ function closePrivacy() {
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
 
