--- a/index.html
+++ b/index.html
@@ -1832,7 +1832,7 @@ async function prosesMasukHardware(namaUser, kunci) {
     const registeredUser = snap.val();
 
     if (registeredUser && registeredUser !== namaIdentitas) {
-        alert("🛑 AKSES DITOLAK!\nSebelumnya anda sudah terdaftar sebagai " + registeredUser + ".\nSilahkan masukan nomor blok anda sesuai nomor rumah anda. Jika anda bukan nama tersebut silahkan hubungi bendahara untuk melakukan reset daftar warga");
+        alert("🛑 AKSES DITOLAK!\nAnda memasukan nomor blok orang lain! Anda sudah terdaftar sebagai " + registeredUser + ".\nSilahkan tulis sesuai nomor rumah anda. Jika anda bukan nama tersebut silahkan hubungi bendahara untuk melakukan reset daftar warga");
         db.ref('log_pelanggaran_hardware').push({ penyamar: namaIdentitas, pemilik_asli: registeredUser, hw: fPrint, ip: net.ip, isp: net.isp, os: sys.os, br: sys.br, waktu: new Date().toLocaleString() });
         return;
     }
@@ -2433,5 +2433,6 @@ observer.observe(document.body, {
 </script>
 </body>
 </html>
+
 
 
